# opengl-billboard

./: .clang-format  CMakeLists.txt  README.md  build.bat
code/: main.cpp  main.h
code/animation/: animation.cpp  animation.hpp
code/camera/: camera.cpp  camera.hpp
code/clock/: clock.cpp  clock.hpp
code/collision/: collision.cpp  collision.hpp
code/controls/: configurations.cpp  configurations.hpp  controls.cpp  controls.hpp
code/graphics/: animation.cpp
code/player/: player.cpp  player.hpp
code/resources/: resources.cpp  resources.hpp
code/shaders/: shader.cpp  shader.hpp
code/shape/: billboard.cpp  billboard.hpp  box.cpp  box.hpp  vertices.hpp
code/window/: window.cpp  window.hpp
resources/level/level1/: map1.json  map1_tiles.json
resources/menu/main/: menu_main.json  menu_main_tileset.json
shaders/: billboard.vs
